check for an invalid id with a repeating reserved character

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "authors": [],
     "homepage": "https://sqids.org/php",
     "require": {
-        "php": "^8.2",
-        "ext-mbstring": "*"
+        "php": "^8.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0"
