--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -8,13 +8,13 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.2]
+        php: [8.1, 8.2]
         extension: [":bcmath", ":gmp"]
 
     name: PHP ${{ matrix.php }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
