--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,12 +1,16 @@
 name: PHP-CS-Fixer
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   run:
     runs-on: ubuntu-latest
 
-    name: PER
+    name: PER-CS
 
     steps:
       - uses: actions/checkout@v4
@@ -15,4 +19,4 @@ jobs:
           php-version: 8.2
           coverage: xdebug
           tools: php-cs-fixer, cs2pr
-      - run: php-cs-fixer fix . --dry-run --rules=@PER --format=checkstyle | cs2pr
+      - run: php-cs-fixer fix . --dry-run --rules=@PER-CS --format=checkstyle | cs2pr
