--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     ],
     "homepage": "https://sqids.org/php",
     "require": {
-        "php": "^8.1"
+        "php": "^7.1|^8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5|^11.2"
+        "phpunit/phpunit": "^7.5|^10.5|^11.2"
     },
     "suggest": {
         "ext-bcmath": "Required to use BC Math arbitrary precision mathematics (*).",
