--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.5|^11.2"
+        "phpunit/phpunit": "^10.5|^11.2|^12.0"
     },
     "suggest": {
         "ext-bcmath": "Required to use BC Math arbitrary precision mathematics (*).",
