--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -1,10 +1,10 @@
 name: PHPUnit
 
 on:
+  pull_request:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   run:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         php: [8.1, 8.2, 8.3, 8.4, 8.5]
-        extension: [":bcmath", ":gmp"]
+        extension: [':bcmath', ':gmp']
 
     name: PHP ${{ matrix.php }}
 
